add /subscription/list/db get all subscriptions form db by token PS
